--- a/life/gtd.org
+++ b/life/gtd.org
@@ -38,3 +38,14 @@
 ***** TODO 监控反欺诈模型
       SCHEDULED: <2020-10-11 日>
 ***** 研究美国股市消费走势 
+*** 11 
+**** week4
+***** 年度总结
+***** 整理 R code
+***** 分析之前模型与新模型效果
+***** 整理贷中能用的特征
+***** 整理好R code 
+
+*** 12
+**** week1
+*****  
